ref : stamp policy 안쓰는 클래스, 메서드 제거 issue : #85